food page update

--- a/food.html
+++ b/food.html
@@ -45,7 +45,7 @@
    <div class="posts_z">
        <h2>More to explore</h2>
    <div class="posts_pics1">
-        <img src="pics/1.jpg"><a href="niall.html" ><h1 class="headings_posts1">10 Healthy tips to live by</h1></a> 
+        <img src="pics/1.jpg"><a href="post1.html" ><h1 class="headings_posts1">10 Healthy tips to live by</h1></a> 
         <img src="pics/2.jpg"><a href="Gallery.html" ><h1 class="headings_posts2">Best low-carb, high-protein foods</h1></a>
         <img src="pics/154.jpg"><a href="Gallery.html" ><h1 class="headings_posts3">Benefits of eating healthy</h1></a> 
         <img src="pics/153.jpg"><a href="Gallery.html" ><h1 class="headings_posts4">Healthy recipes</h1></a>
