--- a/post1.html
+++ b/post1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale-1.0">
-    <title>One Direction</title>
+    <title>Yes 2 Healthy Life</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
     <link href="https://fonts.googleapis.com/css?family=Risque" rel="stylesheet">
     <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css"> 
@@ -20,26 +20,26 @@ body {
 </head>
 <body>
     <nav>
-    <ul>
-       <li><a href="#" class="logo">Yes 2 Healthy life</a><li>
-       <li><a href="#">Home</a><li>
-       <li><a href="food.html">Food</a><li>
-       <li><a href="#">Fitness</a><li>
-        <li><a href="#">Medical Conditions</a><li>
-       <li><a href="Gallery.html">Gallery</a><li>
-       <li><a href="#">Login</a><li>
-     </ul>
+        <ul>
+            <li><a href="#" class="logo">Yes 2 Healthy life</a><li>
+            <li><a href="#">Home</a><li>
+            <li><a href="food.html">Food</a><li>
+            <li><a href="#">Fitness</a><li>
+            <li><a href="#">Medical Conditions</a><li>
+            <li><a href="Gallery.html">Gallery</a><li>
+            <li><a href="#">Login</a><li>
+        </ul>
    </nav>
-<div class="header_tips">
-    <h2 class="heading_tips">10 Healthy Tips to Live By</h2><br/><br/>
-    <p class="para_tips">Eating healthily is all about balance. Every now and then it’s perfectly OK to have pie for dinner or a nice slice of cake at teatime – treats are a part of life – but it's also important to recognise when we're pushing things too far. Indulgent food should be enjoyed and savoured, but only occasionally – it's important to remember that the majority of our diet should be made up of balanced, nutritious everyday foods. Make healthy food a priority in your life and allow it to bring your family and friends together. Learn to love how it makes you feel, how delicious it is and remember that a healthy balanced diet and regular exercise are the keys to a healthy lifestyle.</p>  
-</div>
-<div class="timeline">
-  <div class="container left">
-    <div class="content">
-      <h2>1. COOK FROM SCRATCH</h2>
-      <p>This is one of the most important life skills you can learn. It allows you to have complete control of what goes into your food.</p>
+   <div class="header_tips">
+        <h2 class="heading_tips">10 Healthy Tips to Live By</h2><br/><br/>
+        <p class="para_tips">Eating healthily is all about balance. Every now and then it’s perfectly OK to have pie for dinner or a nice slice of cake at teatime – treats are a part of life – but it's also important to recognise when we're pushing things too far. Indulgent food should be enjoyed and savoured, but only occasionally – it's important to remember that the majority of our diet should be made up of balanced, nutritious everyday foods. Make healthy food a priority in your life and allow it to bring your family and friends together. Learn to love how it makes you feel, how delicious it is and remember that a healthy balanced diet and regular exercise are the keys to a healthy lifestyle.</p>  
     </div>
+    <div class="timeline">
+        <div class="container left">
+        <div class="content">
+            <h2>1. COOK FROM SCRATCH</h2>
+            <p>This is one of the most important life skills you can learn. It allows you to have complete control of what goes into your food.</p>
+        </div>
   </div>
   <div class="container left">
     <div class="content">
