--- a/food.html
+++ b/food.html
@@ -10,21 +10,20 @@
     <link href="https://fonts.googleapis.com/css?family=Acme|Aladin|Amaranth|Bellefair|Concert+One|Cookie|Dosis|Freckle+Face|Frijole|Merienda|Pacifico|Patrick+Hand|Philosopher|Rancho|Roboto|Satisfy|Yellowtail" rel="stylesheet">
 </head>
 <body>
-   <nav>
-    <ul>
-       <li><a href="index.html" class="logo">Yes 2 Healthy life</a><li>
-       <li><a href="index.html">Home</a><li>
-       <li><a href="food.html">Food</a><li>
-       <li><a href="Fitness.html">Fitness</a><li>
-        <li><a href="MedConditions.html">Medical Conditions</a><li>
-       <li><a href="Gallery.html">Gallery</a><li>
-        <li><a href="login.html">Login</a><li>
-     </ul>
+    <nav>
+        <ul>
+            <li><a href="index.html" class="logo">Yes 2 Healthy life</a><li>
+            <li><a href="index.html">Home</a><li>
+            <li><a href="food.html">Food</a><li>
+            <li><a href="Fitness.html">Fitness</a><li>
+            <li><a href="MedConditions.html">Medical Conditions</a><li>
+            <li><a href="Gallery.html">Gallery</a><li>
+            <li><a href="login.html">Login</a><li>
+        </ul>
     </nav>
-    <div class="ban1">
-    </div>
+    <div class="ban1"></div>
     <div class="ban2"> 
-    <div class="name_1"> Food & Health</div>
+        <div class="name_1"> Food & Health</div>
     </div>
     <div class="intro_food">
         <img class="intro_img" src="pics/6.jpg">       
@@ -32,7 +31,7 @@
             <h2>How Does Food Impact Health?</h2><br/>
                The food we eat gives our bodies the "information" and materials they need to function properly. If we don't get the right information, our metabolic processes suffer and our health declines.If we get too much food, or food that gives our bodies the wrong instructions, we can become overweight, undernourished, and at risk for the development of diseases and conditions, such as arthritis, diabetes, and heart disease.
         </div>
-        <button><a href="#posts_z">Posts</a></button><br/><br/>
+        <button><a href="#posts_four">Posts</a></button><br/><br/>
         <button><a href="#food_gallery_z">Gallery</a></button>
     </div>
     <div class="div_quote1">
@@ -41,7 +40,7 @@
         <p style="position: absolute; left: 250px;">-Ann Wigmore</p>
         </div>
     </div>
-    <div class="posts_z">
+    <div id="posts_four"class="posts_z">
         <h2>More to explore</h2>
         <div class="posts_pics1">
             <img src="pics/1.jpg"><a href="post1.html" ><h1 class="headings_posts1">10 Healthy tips to live by</h1></a> 
@@ -54,7 +53,7 @@
         <div class="div_quote21"></div>
         <div class="div_quote22"><h2>You can't fix your health until you fix your diet.</h2></div>
     </div>
-    <div class="food_gallery_z">
+    <div id="food_gallery_z"class="food_gallery_z">
         <h2>Gallery</h2>
         <div class="photo1234">
             <div class="photo123"><a target="_blank" href="pics/8.jpg" > <img src="pics/8.jpg"> </a> </div>
