--- a/Gallery.html
+++ b/Gallery.html
@@ -12,13 +12,13 @@
 <body>
      <nav>
         <ul>
-            <li><a href="#" class="logo">Yes 2 Healthy life</a><li>
-            <li><a href="#">Home</a><li>
+             <li><a href="index.html" class="logo">Yes 2 Healthy life</a><li>
+            <li><a href="index.html">Home</a><li>
             <li><a href="food.html">Food</a><li>
-            <li><a href="#">Fitness</a><li>
-            <li><a href="#">Medical Conditions</a><li>
+            <li><a href="Fitness.html">Fitness</a><li>
+            <li><a href="MedConditions.html">Medical Conditions</a><li>
             <li><a href="Gallery.html">Gallery</a><li>
-            <li><a href="#">Login</a><li>
+            <li><a href="login.html">Login</a><li>
         </ul>
     </nav>
     <div class="header_gallery">
