--- a/index.html
+++ b/index.html
@@ -23,21 +23,18 @@
     </nav>
     <div class="ban1">
     </div>
-    <div class="ban2"> 
-    <div class="name_1">Home</div>
-    </div>
+  
     <div class="intro_fitness">
-         <img class="intro_img" src="https://d2gg9evh47fn9z.cloudfront.net/thumb_COLOURBOX4179640.jpg">       
+         <img class="intro_img" src="zs/depositphotos_59225409-stock-illustration-a-modern-set-of-infographic.jpg">       
         <div class="intro_1">
-       <h2>Top 8 tips to stay healthy</h2><br/>   
-<p>There are hundreds of tips you can do to stay healthy. Here are my top 8</p>
+       <h2>Top 7 tips to stay healthy</h2><br/>   
+<p>There are hundreds of tips you can do to stay healthy. Here are my top 7</p>
     <ol>
     <li>Eat a balanced diet</li>
     <li>Stay active whether it's cardio, working out at the gym or yoga</li>
     <li>Keep your brain active through reading or taking a course</li>
     <li>Take care of your mental health</li>
     <li>Try and go to bed and wake up around the same time every day</li>
-    <li>Get into meditation, even starting with 30 seconds per day and moving to 5 minutes has health benefits</li>
     <li>Don't be too hard on yourself. Change is hard, the key is babysteps</li>
     <li>Spend time with good friends. Don't forget pets too</li>
 </ol>
@@ -47,7 +44,7 @@
     <div class="divy_z">
     </div>
     <div class="divy_1"><h2>"To encourage a healthy lifestyle, slow aging, and increase happiness I recommended meditation. Even starting from 30 seconds a day eventually leading to 5 minutes per day has proven health benefits"</h2>
-    <p style="position: absolute; left: 250px;">Spread Peace, Love & Happiness</p>
+    <p style="position: absolute; left: 250px;">-Spread Peace, Love & Happiness</p>
     </div>
     </div>
    <div class="posts_z">
