fitness page done:)

--- a/Fitness.html
+++ b/Fitness.html
@@ -63,16 +63,16 @@
     </div>
     <div class="divy_11"><h2>You can't fix your health until you fix your Fitness & Diet Plans.</h2>
     </div>
+        <div class="button11">
+            <button><a href="login.html">Sign Up!!</a></button>
+        </div>
+        <div class="Signup"><h2>Need help!</h2>
+            <h2> Feel Free to Ask We are always here to help you!</h2><br/>
+            
+            <h2>We send a month to month email for improvement.
+            And Don't Forget to ask questions.</h2><br/>
+            <h2> Click the button For be a email member.</h2><br/>
     </div>
-     <div class="food_gallery_z">
-       <h2><i>Motivational Pictures: -</i></h2>
-    <div class="photo1234">
-    <div class="photo123"><a target="_blank" href="pics/8.jpg" > <img src="pics/8.jpg"> </a> </div>
-    <div class="photo123"><a target="_blank" href="pics/130.jpg" > <img src="pics/9.jpg"> </a> </div>
-    <div class="photo123"><a target="_blank" href="pics/130.jpg" > <img src="pics/154.jpg"> </a> </div>
-    <div class="photo123"><a target="_blank" href="pics/130.jpg" > <img src="pics/154.jpg"> </a> </div>
-    </div>     
-     <button><a href="Gallery.html">Show more</a></button>
-   </div>
+    </div>
 </body>
 </html>
