minor image/text fixes

--- a/MedConditions.html
+++ b/MedConditions.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale-1.0">
     <title>Fitness Page(Yes2HealthyLife)</title>
-    <link rel="stylesheet" type="text/css" href="stylezs.css">
+    <link rel="stylesheet" type="text/css" href="stylemedical.css">
     <link href="https://fonts.googleapis.com/css?family=Courgette|Great+Vibes|Lobster|Risque|Rubik|Shrikhand" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Acme|Aladin|Amaranth|Bellefair|Concert+One|Cookie|Dosis|Freckle+Face|Frijole|Merienda|Pacifico|Patrick+Hand|Philosopher|Rancho|Roboto|Satisfy|Yellowtail" rel="stylesheet">
@@ -21,7 +21,8 @@
         <li><a href="login.html">Login</a><li>
      </ul>
     </nav>
-    <div class="ban2">
+     <div class="ban2"> 
+    <div class="name_1">Medical Conditions</div>
     </div>
   
     <div class="intro_fitness">
@@ -47,9 +48,8 @@
     </div>
     </div>
    <div class="posts_y">
-   <div class="posts_pics1">
+       <h2>Preventing diseases due to poor health choices can be easy if you want it to be. Between getting to bed on time every night, eating a balanced diet and exercising daily, you can help prevent most health related diseases. Feel free to click below to link to a page from the Canadian government for more information on this.</h2>
         <a href="healthy-living.html" ><h1 class="headings_posts5">Healthy Living Prevents Disease Here</h1></a> 
-    </div>
     </div>
 </body>
 </html>
