edited spacing, paragraphs images

--- a/index.html
+++ b/index.html
@@ -48,6 +48,22 @@
     </div>
     </div>
    <div class="posts_z">
+       <div class="benmed">
+       <p>Benefits of Meditation</p>
+           </div>
+       <div class="benli"></div>
+       <ul>
+           <br>
+           <br>
+       <li>Reduces pain and enhances the body's immune system.</li>
+        <li>Reduces feelings of depression, anxiety, anger and confution.</li>
+        <li>Increases blood flow and slows the heart rate.</li>
+        <li>Provides a sense of calm, peace and balance.</li>
+        <li>Helps reverse heart disease.</li>
+        <li>Helps control thoughts.</li>
+        <li>increases energy.</li>
+        <li>Reduces stress.</li>
+       </ul>
    <div class="posts_pics1">
     <a href="meditation.html" ><h1 class="headings_posts1">Start Meditating Here</h1></a> 
     </div>
@@ -55,17 +71,15 @@
     <div class="divy_g1">
     <div class="divy_z1">
     </div>
-    <div class="divy_11"><h2>The mind and body are one, so If you want your thoughts to be consistent you have to treat your body consistently</h2>
-    </div>
     </div>
      <div class="food_gallery_z">
        <h2><i>Insightful Pictures:</i></h2>
     <div class="photo1234">
-    <div class="photo123"><a target="_blank" href="pics/120.jpg" > <img src="pics/120.jpg"> </a> </div>
-    <div class="photo123"><a target="_blank" href="pics/124.jpg" > <img src="pics/124.jpg"> </a> </div>
-    <div class="photo123"><a target="_blank" href="pics/122.jpg" > <img src="pics/122.jpg"> </a> </div>
+    <div class="photo123"><a target="_blank" href="food.html" > <img src="ZS/image.jpg"> </a> </div>
+    <div class="photo123"><a target="_blank" href="Fitness.html" > <img src="ZS/images.jpg"> </a> </div>
+    <div class="photo123"><a target="_blank" href="MedConditions.html" > <img src="ZS/gillesmedicalhistoryform_49038487.jpg"> </a> </div>
     </div>     
-     <button><a href="Gallery.html">Show more</a></button>
+     
    </div>
 </body>
 </html>
