--- a/meditation.html
+++ b/meditation.html
@@ -26,6 +26,7 @@
     </div>
 <div class="intro_8">
     <h4>
+        <div class="med1">
         <br>
 Meditation for Beginners: 20 Practical Tips for Understanding the Mind
             <br>
@@ -49,8 +50,10 @@ These tips aren’t aimed at helping you to become an expert … they should hel
 <br>
             <br>
 <b>1. Sit for just two minutes.</b> This will seem ridiculously easy, to just meditate for two minutes. That’s perfect. Start with just two minutes a day for a week. If that goes well, increase by another two minutes and do that for a week. If all goes well, by increasing just a little at a time, you’ll be meditating for 10 minutes a day in the 2nd month, which is amazing! But start small first.
-<br>
-            <br>
+            </div>
+    
+        <div class="med2">
+            <p>
 <b>2. Do it first thing each morning.</b> It’s easy to say, “I’ll meditate every day,” but then forget to do it. Instead, set a reminder for every morning when you get up, and put a note that says “meditate” somewhere where you’ll see it.
             <br>
             <br>
@@ -67,7 +70,11 @@ These tips aren’t aimed at helping you to become an expert … they should hel
 <br>
             <br>
 <b>7. Develop a loving attitude.</b> When you notice thoughts and feelings arising during meditation, as they will, look at them with a friendly attitude. See them as friends, not intruders or enemies. They are a part of you, though not all of you. Be friendly and not harsh.
-<br>
+            </p>
+        </div>
+        <div class="med3">
+            <p>
+            <br>
             <br>
 <b>8. Don’t worry too much that you’re doing it wrong.</b> You will worry you’re doing it wrong. That’s OK, we all do. You’re not doing it wrong. There’s no perfect way to do it, just be happy you’re doing it.
             <br>
@@ -79,9 +86,14 @@ These tips aren’t aimed at helping you to become an expert … they should hel
             <br>
             <br>
 <b>11. Get to know yourself.</b> This practice isn’t just about focusing your attention, it’s about learning how your mind works. What’s going on inside there? It’s murky, but by watching your mind wander, get frustrated, avoid difficult feelings … you can start to understand yourself.
+            </p>
+        </div>
+        <div class="med4">
+            <p>
             <br>
             <br>
 <b>12. Become friends with yourself.</b> As you get to know yourself, do it with a friendly attitude instead of one of criticism. You’re getting to know a friend. Smile and give yourself love.
+            
             <br>
             <br>
 <b>13. Do a body scan.</b> Another thing you can do, once you become a little better at following your breath, is focus your attention on one body part at a time. Start at the soles of your feet — how do those feel? Slowly move to your toes, the tops of your feet, your ankles, all the way to the top of your head.
@@ -94,6 +106,10 @@ These tips aren’t aimed at helping you to become an expert … they should hel
             <br>
             <br>
 <b>16. You can do it anywhere.</b> If you’re traveling or something comes up in the morning, you can do meditation in your office. In the park. During your commute. As you walk somewhere. Sitting meditation is the best place to start, but in truth, you’re practicing for this kind of mindfulness in your entire life.
+            </p>
+            </div>
+        <div class="med5">
+            <p>
             <br>
             <br>
 <b>17. Follow guided meditation.</b> If it helps, you can try following guided meditations to start with. My wife is using Tara Brach’s guided meditations, and she finds them very helpful.
@@ -109,6 +125,8 @@ These tips aren’t aimed at helping you to become an expert … they should hel
             <br>
             <br>
 Meditation isn’t always easy or even peaceful. But it has truly amazing benefits, and you can start today, and continue for the rest of your life.
+                </p>
+            </div>
     </h4>
     </div>
 
