tired going for break:(

--- a/food.html
+++ b/food.html
@@ -51,7 +51,12 @@
     </div>
     <div class="div_quote2">
         <div class="div_quote21"></div>
-        <div class="div_quote22"><h2>You can't fix your health until you fix your diet.</h2></div>
+        <div class="div_quote22"><h2><b>You can't fix your health until you fix your diet.</b></h2>
+        <h2>Need Help To setup!</h2>
+            <h2>Don't Worry We are here to help you.</h2>
+            <h2>You can't fix your health until you fix your diet.</h2>
+            <h2>Hurry up Signup With your email!!</h2>
+        </div>
     </div>
     <div id="food_gallery_z"class="food_gallery_z">
         <h2>Gallery</h2>
