--- a/food.html
+++ b/food.html
@@ -44,18 +44,20 @@
         <h2>More to explore</h2>
         <div class="posts_pics1">
             <img src="pics/1.jpg"><a href="post1.html" ><h1 class="headings_posts1">10 Healthy tips to live by</h1></a> 
-            <img src="pics/2.jpg"><a href="Gallery.html" ><h1 class="headings_posts2">Best low-carb, high-protein foods</h1></a>
-            <img src="pics/154.jpg"><a href="Gallery.html" ><h1 class="headings_posts3">Benefits of eating healthy</h1></a> 
-            <img src="pics/153.jpg"><a href="Gallery.html" ><h1 class="headings_posts4">Healthy recipes</h1></a>
+            <img src="pics/2.jpg"><a href="post2.html" ><h1 class="headings_posts2">Top 15 healthy food</h1></a>
+            <img src="pics/154.jpg"><a href="post3.html" ><h1 class="headings_posts3">Benefits of eating healthy</h1></a> 
+            <img src="pics/153.jpg"><a href="post4.html" ><h1 class="headings_posts4">Healthy recipes</h1></a>
         </div>
     </div>
     <div class="div_quote2">
         <div class="div_quote21"></div>
-        <div class="div_quote22"><h2><b>You can't fix your health until you fix your diet.</b></h2>
-        <h2>Need Help To setup!</h2>
-            <h2>Don't Worry We are here to help you.</h2>
-            <h2>You can't fix your health until you fix your diet.</h2>
-            <h2>Hurry up Signup With your email!!</h2>
+        <div class="div_quote22">
+            <h2><b>You can't fix your health until you fix your diet.</b></h2>
+            Need Help To setup!<br/>
+            Don't Worry We are here to help you.<br/>
+            You can't fix your health until you fix your diet.<br/>
+            Hurry up Signup With your email!!<br/>
+            <button><a href="login.html">Sign Up</a></button>
         </div>
     </div>
     <div id="food_gallery_z"class="food_gallery_z">
