changes in gallery

--- a/food.html
+++ b/food.html
@@ -52,11 +52,10 @@
     <div class="div_quote2">
         <div class="div_quote21"></div>
         <div class="div_quote22">
-            <h2><b>You can't fix your health until you fix your diet.</b></h2>
+            <h2><b>You can't fix your health until you fix your diet.</b></h2><br/>
             Need Help To setup!<br/>
             Don't Worry We are here to help you.<br/>
-            You can't fix your health until you fix your diet.<br/>
-            Hurry up Signup With your email!!<br/>
+            Hurry up Signup With your email!!<br/><br/>
             <button><a href="login.html">Sign Up</a></button>
         </div>
     </div>
@@ -64,9 +63,9 @@
         <h2>Gallery</h2>
         <div class="photo1234">
             <div class="photo123"><a target="_blank" href="pics/8.jpg" > <img src="pics/8.jpg"> </a> </div>
-            <div class="photo123"><a target="_blank" href="pics/130.jpg" > <img src="pics/9.jpg"> </a> </div>
-            <div class="photo123"><a target="_blank" href="pics/130.jpg" > <img src="pics/154.jpg"> </a> </div>
-            <div class="photo123"><a target="_blank" href="pics/130.jpg" > <img src="pics/154.jpg"> </a> </div>
+            <div class="photo123"><a target="_blank" href="pics/9.jpg" > <img src="pics/9.jpg"> </a> </div>
+            <div class="photo123"><a target="_blank" href="pics/162.jpg" > <img src="pics/162.jpg"> </a> </div>
+            <div class="photo123"><a target="_blank" href="pics/155.jpg" > <img src="pics/155.jpg"> </a> </div>
         </div>     
     <button><a href="Gallery.html">Show more</a></button>
    </div>
