--- a/Gallery.html
+++ b/Gallery.html
@@ -35,6 +35,7 @@
             <div class="gallery"><a target="_blank" href="pics/114.JPG"><img src="pics/114.JPG" style="width:100%"></a></div>
             <div class="gallery"><a target="_blank" href="pics/115.JPG"><img src="pics/115.JPG" style="width:100%"></a></div>
             <div class="gallery"><a target="_blank" href="pics/116.JPG"><img src="pics/116.JPG" style="width:100%"></a></div>
+            <div class="gallery"><a target="_blank" href="pics/3.jpg"><img src="pics/3.jpg" style="width:100%"></a></div>
         </div>
         <div class="column">
             <div class="gallery"> <a target="_blank" href="pics/117.jpg"><img src="pics/117.jpg" style="width:100%"></a></div>
@@ -42,7 +43,8 @@
             <div class="gallery"> <a target="_blank" href="pics/119.jpg"><img src="pics/119.jpg" style="width:100%"></a></div>
             <div class="gallery"><a target="_blank" href="pics/120.jpg"><img src="pics/120.jpg" style="width:100%"></a></div>
             <div class="gallery"> <a target="_blank" href="pics/121.jpg"><img src="pics/121.jpg" style="width:100%"></a></div>
-            <div class="gallery"><a target="_blank" href="pics/122.jpg"><img src="pics/122.jpg" style="width:100%"></a></div>
+            <div class="gallery"><a target="_blank" href="pics/4.jpg"><img src="pics/4.jpg" style="width:100%"></a></div>
+            <div class="gallery"><a target="_blank" href="pics/8.jpg"><img src="pics/8.jpg" style="width:100%"></a></div>
         </div>  
         <div class="column">
             <div class="gallery"> <a target="_blank" href="pics/123.jpg"><img src="pics/123.jpg" style="width:100%"></a></div>
@@ -51,7 +53,8 @@
             <div class="gallery"><a target="_blank" href="pics/126.jpg"><img src="pics/126.jpg" style="width:100%"></a></div>
             <div class="gallery"> <a target="_blank" href="pics/127.jpg"><img src="pics/127.jpg" style="width:100%"></a></div>
             <div class="gallery"><a target="_blank" href="pics/128.jpg"><img src="pics/128.jpg" style="width:100%"></a></div>
-            <div class="gallery"><a target="_blank" href="pics/129.jpg"><img src="pics/129.jpg" style="width:100%"></a></div>
+            <div class="gallery"><a target="_blank" href="pics/11.jpg"><img src="pics/11.jpg" style="width:100%"></a></div>
+            <div class="gallery"><a target="_blank" href="pics/139.jpg"><img src="pics/139.jpg" style="width:100%"></a></div>
         </div>
         <div class="column">
             <div class="gallery"><a target="_blank" href="pics/130.jpg"><img src="pics/130.jpg" style="width:100%"></a></div>
@@ -59,6 +62,9 @@
             <div class="gallery"><a target="_blank" href="pics/132.jpg"><img src="pics/132.jpg" style="width:100%"></a></div>
             <div class="gallery"><a target="_blank" href="pics/133.jpg"><img src="pics/133.jpg" style="width:100%"></a></div>
             <div class="gallery"><a target="_blank" href="pics/134.jpg"><img src="pics/134.jpg" style="width:100%"></a></div>
+            <div class="gallery"><a target="_blank" href="pics/c.jpg"><img src="pics/c.jpg" style="width:100%"></a></div>
+            <div class="gallery"><a target="_blank" href="pics/134.jpg"><img src="pics/134.jpg" style="width:100%"></a></div>
+            <div class="gallery"><a target="_blank" href="pics/135.jpg"><img src="pics/135.jpg" style="width:100%"></a></div>
         </div>
     </div>
 </body>
