--- a/food.html
+++ b/food.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale-1.0">
-    <title>Yes 2 Healthy Life</title>
+    <title>Food & Health</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
     <link href="https://fonts.googleapis.com/css?family=Courgette|Great+Vibes|Lobster|Risque|Rubik|Shrikhand" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
@@ -31,8 +29,9 @@
             <h2>How Does Food Impact Health?</h2><br/>
                The food we eat gives our bodies the "information" and materials they need to function properly. If we don't get the right information, our metabolic processes suffer and our health declines.If we get too much food, or food that gives our bodies the wrong instructions, we can become overweight, undernourished, and at risk for the development of diseases and conditions, such as arthritis, diabetes, and heart disease.
         </div>
-        <button><a href="#posts_four">Posts</a></button><br/><br/>
-        <button><a href="#food_gallery_z">Gallery</a></button>
+        <button><a href="#posts_four">Food related posts</a></button><br/><br/>
+        <button><a href="#food_gallery_z">Gallery</a></button><br/><br/>
+        <button><a href="#signup">Sign up</a></button>
     </div>
     <div class="div_quote1">
         <div class="div_quote11"></div>
@@ -40,7 +39,7 @@
         <p style="position: absolute; left: 250px;">-Ann Wigmore</p>
         </div>
     </div>
-    <div id="posts_four"class="posts_z">
+    <section id="posts_four"class="posts_z">
         <h2>More to explore</h2>
         <div class="posts_pics1">
             <img src="pics/1.jpg"><a href="post1.html" ><h1 class="headings_posts1">10 Healthy tips to live by</h1></a> 
@@ -48,8 +47,8 @@
             <img src="pics/154.jpg"><a href="post3.html" ><h1 class="headings_posts3">Benefits of eating healthy</h1></a> 
             <img src="pics/153.jpg"><a href="post4.html" ><h1 class="headings_posts4">Healthy recipes</h1></a>
         </div>
-    </div>
-    <div class="div_quote2">
+    </section>
+    <section id="signup" class="div_quote2">
         <div class="div_quote21"></div>
         <div class="div_quote22">
             <h2><b>You can't fix your health until you fix your diet.</b></h2><br/>
@@ -58,8 +57,8 @@
             Hurry up Signup With your email!!<br/><br/>
             <button><a href="login.html">Sign Up</a></button>
         </div>
-    </div>
-    <div id="food_gallery_z"class="food_gallery_z">
+    </section>
+    <section id="food_gallery_z"class="food_gallery_z">
         <h2>Gallery</h2>
         <div class="photo1234">
             <div class="photo123"><a target="_blank" href="pics/8.jpg" > <img src="pics/8.jpg"> </a> </div>
@@ -68,6 +67,6 @@
             <div class="photo123"><a target="_blank" href="pics/155.jpg" > <img src="pics/155.jpg"> </a> </div>
         </div>     
     <button><a href="Gallery.html">Show more</a></button>
-   </div>
+   </section>
 </body>
 </html>
