--- a/food.html
+++ b/food.html
@@ -67,6 +67,14 @@
             <div class="photo123"><a target="_blank" href="pics/155.jpg" > <img src="pics/155.jpg"> </a> </div>
         </div>     
     <button><a href="Gallery.html">Show more</a></button>
-   </section>
+   </section> 
+   <div>
+</div>
+
+<footer>
+  <p>Posted by: Hege Refsnes</p>
+  <p>Contact information: <a href="mailto:someone@example.com">someone@example.com</a>.</p>
+</footer>
+
 </body>
 </html>
