--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="ban1">
     </div>
   
-    <div class="intro_fitness">
+    <div class="intro_home">
          <img class="intro_img" src="zs/depositphotos_59225409-stock-illustration-a-modern-set-of-infographic.jpg">       
         <div class="intro_1">
        <h2>Top 7 tips to stay healthy</h2><br/>   
@@ -40,7 +40,7 @@
 </ol>
   </div>
     </div>
-    <div class="divy_g">
+    <div class="div_a">
     <div class="divy_z">
     </div>
     <div class="divy_1"><h2>"To encourage a healthy lifestyle, slow aging, and increase happiness I recommended meditation. Even starting from 30 seconds a day eventually leading to 5 minutes per day has proven health benefits"</h2>
@@ -73,7 +73,7 @@
     </div>
     </div>
      <div class="food_gallery_z">
-       <h2><i>Insightful Pictures:</i></h2>
+       <h2><i>Pages:</i></h2>
     <div class="photo1234">
     <div class="photo123"><a target="_blank" href="food.html" > <img src="ZS/image.jpg"> </a> </div>
     <div class="photo123"><a target="_blank" href="Fitness.html" > <img src="ZS/images.jpg"> </a> </div>
@@ -81,5 +81,11 @@
     </div>     
      
    </div>
+    
+    <div id="footer">
+     <p>Posted by: Zach Scott, Sumanpreet Kaur</p>
+  <p>Contact information: <a href="mailto:contact.yes2healthylife@gmail.com">
+  contact.yes2healthylife@gmail.com</a>.</p>
+    </div>
 </body>
 </html>
