--- a/MedConditions.html
+++ b/MedConditions.html
@@ -51,5 +51,10 @@
        <h2>Preventing diseases due to poor health choices can be easy if you want it to be. Between getting to bed on time every night, eating a balanced diet and exercising daily, you can help prevent most health related diseases. Feel free to click below to link to a page from the Canadian government for more information on this.</h2>
         <a href="healthy-living.html" ><h1 class="headings_posts5">Healthy Living Prevents Disease Here</h1></a> 
     </div>
+    <div id="footer">
+     <p style="text-align: center">Posted by: CJ, Zach Scott, Sumanpreet Kaur</p>
+  <p style="text-align: center">Contact information: <a href="mailto:contact.yes2healthylife@gmail.com">
+  contact.yes2healthylife@gmail.com</a>.</p>
+    </div>
 </body>
 </html>
