--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
    </div>
     
     <div id="footer">
-     <p>Posted by: Zach Scott, Sumanpreet Kaur</p>
-  <p>Contact information: <a href="mailto:contact.yes2healthylife@gmail.com">
+     <p style="text-align: center">Posted by: CJ, Zach Scott, Sumanpreet Kaur</p>
+  <p style="text-align: center">Contact information: <a href="mailto:contact.yes2healthylife@gmail.com">
   contact.yes2healthylife@gmail.com</a>.</p>
     </div>
 </body>
