--- a/Fitness.html
+++ b/Fitness.html
@@ -74,5 +74,10 @@
             <h2> Click the button For be a email member.</h2><br/>
     </div>
     </div>
+    <div id="footer">
+     <p style="text-align: center">Posted by: CJ, Zach Scott, Sumanpreet Kaur</p>
+  <p style="text-align: center">Contact information: <a href="mailto:contact.yes2healthylife@gmail.com">
+  contact.yes2healthylife@gmail.com</a>.</p>
+    </div>
 </body>
 </html>
