--- a/login.html
+++ b/login.html
@@ -192,5 +192,10 @@
       </form>
 </div>
        <script src="emailpage.js"></script>
+        <div id="footer">
+     <p style="text-align: center">Posted by: CJ, Zach Scott, Sumanpreet Kaur</p>
+  <p style="text-align: center">Contact information: <a href="mailto:contact.yes2healthylife@gmail.com">
+  contact.yes2healthylife@gmail.com</a>.</p>
+    </div>
 </body>
 </html>
