--- a/meditation.html
+++ b/meditation.html
@@ -21,9 +21,12 @@
         <li><a href="login.html">Login</a><li>
      </ul>
     </nav>
+    <div class="name_1"> Meditation</div>
+    <div class="cj">
+        <h1>Some videos to Watch for Meditation.</h1>
     <div class="yt_playlist">
     <iframe width="720" height="405" src="https://www.youtube.com/embed/?listType=playlist&list=PL03v7XaI75deCJWn3wGd-Dtvp-tZVR81C" frameborder="0" allowfullscreen> </iframe>
-    </div>
+    </div></div>
 <div class="intro_8">
     <h4>
         <div class="med1">
