--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     </nav>
     <div class="ban1">
     </div>
+  <div class="name_1"> Yes2healthyLife</div>
   
     <div class="intro_fitness">
          <img class="intro_img" src="zs/depositphotos_59225409-stock-illustration-a-modern-set-of-infographic.jpg">       
@@ -51,7 +52,7 @@
        <div class="benmed">
        <p>Benefits of Meditation</p>
            </div>
-       <div class="benli"></div>
+       <div class="benli">
        <ul>
            <br>
            <br>
@@ -63,7 +64,7 @@
         <li>Helps control thoughts.</li>
         <li>increases energy.</li>
         <li>Reduces stress.</li>
-       </ul>
+       </ul></div>
    <div class="posts_pics1">
     <a href="meditation.html" ><h1 class="headings_posts1">Start Meditating Here</h1></a> 
     </div>
@@ -74,10 +75,10 @@
     </div>
      <div class="food_gallery_z">
        <h2><i>Insightful Pictures:</i></h2>
-    <div class="photo1234">
-    <div class="photo123"><a target="_blank" href="food.html" > <img src="ZS/image.jpg"> </a> </div>
-    <div class="photo123"><a target="_blank" href="Fitness.html" > <img src="ZS/images.jpg"> </a> </div>
-    <div class="photo123"><a target="_blank" href="MedConditions.html" > <img src="ZS/gillesmedicalhistoryform_49038487.jpg"> </a> </div>
+    <div class="posts_pics1">
+    <a target="_blank" href="food.html" ><h1 class="headings_posts1">Food</h1> <img src="pics/1.jpg"> </a>
+        <a target="_blank" href="Fitness.html" ><h1 class="headings_posts2">Fitness</h1> <img src="cj/10686999_350440211778423_7358164587401688409_n.jpg"> </a>
+    <a target="_blank" href="MedConditions.html" > <h1 class="headings_posts3">Medical Condition</h1><img src="ZS/doctor.jpg"> </a>
     </div>     
      
    </div>
