--- a/Gallery.html
+++ b/Gallery.html
@@ -36,12 +36,18 @@
             <div class="gallery"><a target="_blank" href="pics/115.JPG"><img src="pics/115.JPG" style="width:100%"></a></div>
             <div class="gallery"><a target="_blank" href="pics/116.JPG"><img src="pics/116.JPG" style="width:100%"></a></div>
             <div class="gallery"><a target="_blank" href="pics/3.jpg"><img src="pics/3.jpg" style="width:100%"></a></div>
+            <div class="gallery"><a target="_blank" href="pics/115.JPG"><img src="pics/115.JPG" style="width:100%"></a></div>
+            <div class="gallery"><a target="_blank" href="pics/116.JPG"><img src="pics/116.JPG" style="width:100%"></a></div>
+            <div class="gallery"><a target="_blank" href="pics/3.jpg"><img src="pics/3.jpg" style="width:100%"></a></div>
         </div>
         <div class="column">
             <div class="gallery"> <a target="_blank" href="pics/117.jpg"><img src="pics/117.jpg" style="width:100%"></a></div>
             <div class="gallery"><a target="_blank" href="pics/118.jpg"><img src="pics/118.jpg" style="width:100%"></a></div>
             <div class="gallery"> <a target="_blank" href="pics/119.jpg"><img src="pics/119.jpg" style="width:100%"></a></div>
             <div class="gallery"><a target="_blank" href="pics/120.jpg"><img src="pics/120.jpg" style="width:100%"></a></div>
+            <div class="gallery"> <a target="_blank" href="pics/121.jpg"><img src="pics/121.jpg" style="width:100%"></a></div>
+            <div class="gallery"><a target="_blank" href="pics/4.jpg"><img src="pics/4.jpg" style="width:100%"></a></div>
+            <div class="gallery"><a target="_blank" href="ZS/Meditation-can-improve-mental-health-1024x683.jpg"><img src="ZS/Meditation-can-improve-mental-health-1024x683.jpg" style="width:100%"></a></div>
             <div class="gallery"> <a target="_blank" href="pics/121.jpg"><img src="pics/121.jpg" style="width:100%"></a></div>
             <div class="gallery"><a target="_blank" href="pics/4.jpg"><img src="pics/4.jpg" style="width:100%"></a></div>
             <div class="gallery"><a target="_blank" href="pics/8.jpg"><img src="pics/8.jpg" style="width:100%"></a></div>
@@ -53,6 +59,9 @@
             <div class="gallery"><a target="_blank" href="pics/126.jpg"><img src="pics/126.jpg" style="width:100%"></a></div>
             <div class="gallery"> <a target="_blank" href="pics/127.jpg"><img src="pics/127.jpg" style="width:100%"></a></div>
             <div class="gallery"><a target="_blank" href="pics/128.jpg"><img src="pics/128.jpg" style="width:100%"></a></div>
+            <div class="gallery"><a target="_blank" href="ZS/7086.jpg"><img src="ZS/7086.jpg" style="width:100%"></a></div>
+            <div class="gallery"><a target="_blank" href="ZS/meditation-2214532.jpg"><img src="ZS/meditation-2214532.jpg" style="width:100%"></a></div>
+            <div class="gallery"><a target="_blank" href="pics/128.jpg"><img src="pics/128.jpg" style="width:100%"></a></div>
             <div class="gallery"><a target="_blank" href="pics/11.jpg"><img src="pics/11.jpg" style="width:100%"></a></div>
             <div class="gallery"><a target="_blank" href="pics/139.jpg"><img src="pics/139.jpg" style="width:100%"></a></div>
         </div>
@@ -62,6 +71,9 @@
             <div class="gallery"><a target="_blank" href="pics/132.jpg"><img src="pics/132.jpg" style="width:100%"></a></div>
             <div class="gallery"><a target="_blank" href="pics/133.jpg"><img src="pics/133.jpg" style="width:100%"></a></div>
             <div class="gallery"><a target="_blank" href="pics/134.jpg"><img src="pics/134.jpg" style="width:100%"></a></div>
+            <div class="gallery"><a target="_blank" href="CJ/10592976_350228325132945_7431640352807195215_n.jpg"><img src="CJ/10592976_350228325132945_7431640352807195215_n.jpg" style="width:100%"></a></div>
+            <div class="gallery"><a target="_blank" href="CJ/10653313_349757135180064_7681397065363671229_n.jpg"><img src="CJ/10653313_349757135180064_7681397065363671229_n.jpg" style="width:100%"></a></div>
+            <div class="gallery"><a target="_blank" href="pics/135.jpg"><img src="pics/135.jpg" style="width:100%"></a></div>
             <div class="gallery"><a target="_blank" href="pics/c.jpg"><img src="pics/c.jpg" style="width:100%"></a></div>
             <div class="gallery"><a target="_blank" href="pics/134.jpg"><img src="pics/134.jpg" style="width:100%"></a></div>
             <div class="gallery"><a target="_blank" href="pics/135.jpg"><img src="pics/135.jpg" style="width:100%"></a></div>
