--- a/Gallery.html
+++ b/Gallery.html
@@ -79,5 +79,10 @@
             <div class="gallery"><a target="_blank" href="pics/135.jpg"><img src="pics/135.jpg" style="width:100%"></a></div>
         </div>
     </div>
+    <div id="footer5">
+     <p style="text-align: center">Posted by: CJ, Zach Scott, Sumanpreet Kaur</p>
+  <p style="text-align: center">Contact information: <a href="mailto:contact.yes2healthylife@gmail.com">
+  contact.yes2healthylife@gmail.com</a>.</p>
+    </div>
 </body>
 </html>
