--- a/post3.html
+++ b/post3.html
@@ -43,5 +43,10 @@
           <h2>5. Mental Health</h2>
             <p>Healthy food provides a stronger, faster brain functioning and more energy to get through work or your busy day. Studies have shown that students who a complete breakfast before school are more focussed on class.</p></div>
         </div>
+    <div id="footer3">
+     <p style="text-align: center">Posted by: CJ, Zach Scott, Sumanpreet Kaur</p>
+  <p style="text-align: center">Contact information: <a href="mailto:contact.yes2healthylife@gmail.com">
+  contact.yes2healthylife@gmail.com</a>.</p>
+    </div>
     </body>
 </html>
