--- a/food.html
+++ b/food.html
@@ -71,10 +71,11 @@
    <div>
 </div>
 
-<footer>
-  <p>Posted by: Hege Refsnes</p>
-  <p>Contact information: <a href="mailto:someone@example.com">someone@example.com</a>.</p>
-</footer>
+<div id="footer">
+     <p style="text-align: center">Posted by: CJ, Zach Scott, Sumanpreet Kaur</p>
+  <p style="text-align: center">Contact information: <a href="mailto:contact.yes2healthylife@gmail.com">
+  contact.yes2healthylife@gmail.com</a>.</p>
+    </div>
 
 </body>
 </html>
