--- a/post1.html
+++ b/post1.html
@@ -96,6 +96,10 @@ body {
     </div>
   </div>
 </div>
-
+<div id="footer1">
+     <p style="text-align: center">Posted by: CJ, Zach Scott, Sumanpreet Kaur</p>
+  <p style="text-align: center">Contact information: <a href="mailto:contact.yes2healthylife@gmail.com">
+  contact.yes2healthylife@gmail.com</a>.</p>
+    </div>
 </body>
 </html>
