--- a/post2.html
+++ b/post2.html
@@ -163,5 +163,10 @@
             </p>
           </div>
         </div>
+    <div id="footer2">
+     <p style="text-align: center">Posted by: CJ, Zach Scott, Sumanpreet Kaur</p>
+  <p style="text-align: center">Contact information: <a href="mailto:contact.yes2healthylife@gmail.com">
+  contact.yes2healthylife@gmail.com</a>.</p>
+    </div>
     </body>
 </html>
