--- a/post4.html
+++ b/post4.html
@@ -93,5 +93,10 @@
         <br/>
         <br/>
       </div>
+    <div id="footer4">
+     <p style="text-align: center">Posted by: CJ, Zach Scott, Sumanpreet Kaur</p>
+  <p style="text-align: center">Contact information: <a href="mailto:contact.yes2healthylife@gmail.com">
+  contact.yes2healthylife@gmail.com</a>.</p>
+    </div>
     </body>
 </html>
