--- a/meditation.html
+++ b/meditation.html
@@ -22,7 +22,7 @@
      </ul>
     </nav>
     <div class="name_1"> Meditation</div>
-    <div class="cj">
+    <div class="CJ">
     <div class="yt_playlist">
     <iframe width="720" height="405" src="https://www.youtube.com/embed/?listType=playlist&list=PL03v7XaI75deCJWn3wGd-Dtvp-tZVR81C" frameborder="0" allowfullscreen> </iframe>
     </div></div>
